@@ -1,3 +1,7 @@
+2008-03-08  lav
+
+	* edit.cc: fixed has_widechar for unsigned wchar_t.
+
 2008-01-21  lav
 
 	* block.cc: use MessageSync instead of Message+SyncTextWin (fixes
